Fix more markbot errors

--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ a {
 .btn {
   padding: 1rem;
   text-align: center;
-  background-color: rgb(43, 82, 68);
+  background-color: #f9f9f9;
   border-radius: 3px;
 }
 
