--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,12 @@ body {
 
 .skip-links a:focus {
   top: 0;
-  z-index: 1000;
+  z-index: 2;
 }
 
 main {
-  padding-left: 15rem;
-  padding-right: 15rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 ul {
@@ -66,8 +66,7 @@ ul {
 .front {
   background-color: #f2f2f2;
   padding: 2.5em 2.5em 5em;
-  position: relative;
-  z-index: 2;
+
 }
 
 .banner {
@@ -89,14 +88,12 @@ p {
 }
 
 nav {
-  position: absolute;
-  z-index: 3;
   background-color: #fff;
   width: 100%;
 }
 
 .nav {
-  display: none;
+  display: block;
   margin-top: 0;
   margin-bottom: 0;
 }
@@ -116,7 +113,7 @@ nav {
   width: 40px;
   display: inline-block;
   position: absolute;
-  z-index: 3;
+  z-index: 5;
   right: 3px;
   top: 10px;
 }
@@ -145,14 +142,10 @@ nav {
 
 .style {
   background: white;
-  width: 50%;
-  position: absolute;
-  top: 0;
-  right: 0;
+  text-align: center;
 }
 
-li {
-  padding: 1.5rem;
+nav li {
   border-bottom: 3px solid black;
   font-size: 1em;
   width: 100%;
@@ -160,7 +153,7 @@ li {
   text-align: center;
 }
 
-li:hover {
+.btn:hover {
   background-color: grey;
 }
 
@@ -169,6 +162,10 @@ a {
   color: black;
 }
 
+nav a {
+  width: 100%;
+  display: block;
+}
 .btn {
   padding: 1rem;
   text-align: center;
@@ -229,7 +226,10 @@ img {
 }
 
 .grid-foot {
+  z-index: 6;
   display: grid;
+  grid-template-areas:
+  "mail instagram";
   margin: 20px 10px;
 }
 
@@ -248,7 +248,7 @@ img {
 
 .logo-sized {
   width: 50px;
-  z-index: 3;
+  z-index: 5;
   position: absolute;
   margin: 10px 20px;
 }
@@ -259,7 +259,7 @@ img {
 
 .popup {
   position: fixed;
-  z-index: 100;
+  z-index: 10;
   width: 100%;
   height: 100%;
   left: 0;
@@ -311,6 +311,10 @@ img {
   font-size: 2rem;
 }
 
+.bottom {
+  bottom: 0;
+}
+
 .relative:hover > .absolute {
   display: block;
 }
@@ -333,7 +337,7 @@ img {
 
   .style {
     width: 100%;
-    position: absolute;
+
   }
 
   .nav-label {
