--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ body {
   -webkit-overflow-scrolling: touch;
   -webkit-perspective: 1px;
   perspective: 1px;
-  font-family: 'Nunito', sans-serif;
+  font-family: Nunito, sans-serif;
 }
 
 .skip-links {
@@ -66,8 +66,7 @@ ul {
 
 .front {
   background-color: #f2f2f2;
-  padding: 2.5em 2.5em 5em;
-
+  padding: 1em 2.5em 5em;
 }
 
 .cropped {
@@ -191,9 +190,18 @@ nav a {
 .grid-large {
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-  gap: 1rem;
+  gap: 4rem;
   column-gap: 1rem;
+}
+
+.grid-small {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 60px auto auto;
+}
+
+article p {
+  margin-top: 1em;
 }
 
 .flex {
@@ -204,8 +212,8 @@ nav a {
 .about {
   width: 100%;
   margin-top: 1rem;
-  padding-left: 4rem;
-  padding-right: 4em;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .section {
@@ -213,7 +221,7 @@ nav a {
 }
 
 .section p {
-  margin-top: 10px;
+  margin-top: 10em;
 }
 
 .section h2 {
@@ -222,10 +230,6 @@ nav a {
 
 .text-block {
   gap: 1rem;
-}
-
-h2 {
-  text-align: center;
 }
 
 img {
@@ -241,8 +245,7 @@ img {
 .grid-foot {
   z-index: 6;
   display: grid;
-  grid-template-areas:
-  "mail instagram";
+  grid-template-areas: "mail instagram";
   margin: 20px 10px;
 }
 
@@ -338,6 +341,10 @@ img {
 
 @media only screen and (min-width: 34em) {
 
+  .grid-small {
+    grid-template-rows: 95px auto auto;
+  }
+
   .logo-sized {
     width: 100px;
   }
@@ -360,12 +367,19 @@ img {
     width: 50%;
     padding-left: .5em;
     padding-right: .5em;
+    align-items: stretch;
   }
 
   .grid-large {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    gap: 4rem;
+    column-gap: 1rem;
+  }
+
+  .about {
+    padding-left: 4em;
+    padding-right: 4em;
   }
 
   .banner {
@@ -375,12 +389,26 @@ img {
 
 }
 
+@media only screen and (min-width: 45em) {
+
+  .grid-small {
+    grid-template-rows: 80px auto auto;
+  }
+
+}
+
 @media only screen and (min-width: 50em) {
+
   .cropped img {
     margin-top: -17em;
   }
 
-  @media only screen and (min-width: 60em) {
-    .cropped img {
-      margin-top: -30em;
-    }
+}
+
+@media only screen and (min-width: 60em) {
+
+  .cropped img {
+    margin-top: -30em;
+  }
+
+}
