--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,19 @@ body {
   -webkit-overflow-scrolling: touch;
   -webkit-perspective: 1px;
   perspective: 1px;
+  font-family: "Amatic SC", cursive;
   font-family: Nunito, sans-serif;
+}
+
+h2 {
+  font-family: "Amatic SC", cursive;
+  font-size: 2.25rem;
+}
+
+.nav li,
+.btn {
+  font-family: "Amatic SC", cursive;
+  font-size: 1.5rem;
 }
 
 .skip-links {
@@ -70,7 +82,7 @@ ul {
 }
 
 .cropped {
-  height: 30em;
+
   overflow: hidden;
 }
 
@@ -89,6 +101,8 @@ ul {
 
 h1 {
   margin-bottom: 0;
+  font-family: "Amatic SC", cursive;
+  font-size: 3.375rem;
 }
 
 p {
@@ -104,6 +118,7 @@ nav {
   display: block;
   margin-top: 0;
   margin-bottom: 0;
+  background-color: #f9f9f9;
 }
 
 .nav-check {
@@ -190,14 +205,15 @@ nav a {
 .grid-large {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 4rem;
   column-gap: 1rem;
+  grid-gap: 2rem;
 }
 
 .grid-small {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 60px auto auto;
+  row-gap: 1rem;
 }
 
 article p {
@@ -246,7 +262,7 @@ img {
   z-index: 6;
   display: grid;
   grid-template-areas: "mail instagram";
-  margin: 20px 10px;
+  margin: 60px 10px;
 }
 
 .mail {
@@ -263,10 +279,15 @@ img {
 }
 
 .logo-sized {
-  width: 50px;
+  width: 40px;
+  height: 150px;
   z-index: 5;
   position: absolute;
   margin: 10px 20px;
+}
+
+.title {
+  padding-left: 30px;
 }
 
 .button {
@@ -277,9 +298,7 @@ img {
   position: fixed;
   z-index: 10;
   width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
+  height: 200%;
   background-color: rgba(0, 0, 0, .6);
   display: none;
   padding: 90px;
@@ -288,6 +307,10 @@ img {
 #img-popup-gd-main .popup-content {
   position: relative;
   border: 5px solid #fff;
+}
+
+.popup-content {
+  position: relative;
 }
 
 .close {
@@ -320,7 +343,7 @@ img {
 
 .absolute {
   position: absolute;
-  left: 50%;
+  left: 55%;
   top: 50%;
   transform: translate(-50%, -50%);
   display: none;
@@ -336,23 +359,29 @@ img {
 }
 
 .relative:hover {
-  opacity: .5;
+  opacity: .35;
+}
+
+@media only screen and (min-width: 23em) {
+
+  .title {
+    padding-left: 0;
+  }
+
+}
+
+@media only screen and (min-width: 28em) {
+
+  .logo-sized {
+    width: 100px;
+  }
+
 }
 
 @media only screen and (min-width: 34em) {
 
   .grid-small {
     grid-template-rows: 95px auto auto;
-  }
-
-  .logo-sized {
-    width: 100px;
-  }
-
-  .nav {
-    display: flex;
-    justify-content: space-around;
-    margin-left: 5em;
   }
 
   .style {
@@ -370,21 +399,31 @@ img {
     align-items: stretch;
   }
 
-  .grid-large {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 4rem;
-    column-gap: 1rem;
-  }
-
-  .about {
-    padding-left: 4em;
-    padding-right: 4em;
-  }
-
   .banner {
     top: 4em;
     padding: 0;
+    height: 500px;
+  }
+
+}
+
+@media only screen and (min-width: 43.75em) {
+
+  .nav {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 2rem;
+    padding: 0 0 0 2rem;
+    background-color: #f9f9f9;
+  }
+
+  .logo {
+    top: 72px;
+    left: 5px;
+  }
+
+  .front {
+    margin: 0 3.5rem;
   }
 
 }
@@ -409,6 +448,20 @@ img {
 
   .cropped img {
     margin-top: -30em;
+  }
+
+  .grid-large {
+    column-gap: 5rem;
+    padding: 2rem 5rem;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about {
+    padding: 0 5rem;
+  }
+
+  .front {
+    margin: 0;
   }
 
 }
